# streamodules

./: .gitignore  .replit  app.py  app_new.py  best_params.json  new_visualization.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  server.py  test_api.html  test_new_viz.py  trading_config.py  utils.py
attached_assets/: Pasted-KeyError-close-Traceback-File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-1742500454187.txt  Pasted-KeyError-close-Traceback-File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-1742500473766.txt  backtest.py  backtest_individual.py  best_params.json  config.py  fetch.py  indicators.py  run_market_hours.py  strategy.py
attached_assets/exemples/: config.py  indicators.py  strategy.py  view_object_storage.py  visualization.py
modules/: __init__.py  backtest.py  config.py  data.py  simulation.py  storage.py  ui.py  visualization.py
trading_platform/: __init__.py  utils.py
trading_platform/backend/: __init__.py  app.py
trading_platform/core/: __init__.py  backtest.py  config.py  data_feed.py  indicators.py
trading_platform/frontend/: .eslintrc.js  package.json
trading_platform/frontend/public/: index.html  manifest.json
trading_platform/frontend/src/: App.js
trading_platform/frontend/src/components/: BacktestResults.js  PriceChart.js  SymbolSelector.js
trading_platform/frontend/src/pages/: Dashboard.js
trading_platform/frontend/src/services/: api.js
trading_platform/modules/: __init__.py
trading_platform/modules/crypto/: __init__.py  config.py  service.py
(+1 files in other folders)
