[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "streamlit>=1.43.2",
    "yfinance>=0.2.54",
]
